--- a/car_rental/public/index.html
+++ b/car_rental/public/index.html
@@ -12,7 +12,7 @@
   </head>
   <body>
     <!-- <noscript>You need to enable JavaScript to run this app.</noscript> -->
-    <div id="root"></div>
+    <div id="root" style="background-color: #f5f5f5;"></div>
    
   </body>
 </html>
